Fix navbar height and spacing

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -21,6 +21,7 @@ html::-webkit-scrollbar-track {
     overflow-x:auto;
     overflow-y: hidden;
     max-height: 100vh;
+    height:100vh;
 }
 
 #row::-webkit-scrollbar {
