--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url("button.css");
 @import url("card.css");
 @import url("post.css");
+@import url("navbar.css");
 
 body {
     background: rgb(52, 58, 64);
@@ -13,26 +14,6 @@ a:hover {
     color:white;
     text-decoration: none;
 }
-.navbar {
-    height:97%;
-    border-right: 2px solid black;
-    position:fixed;
-    z-index:100;
-    padding:0.01%;
-}
-
-#navcol {
-    max-width: 4.5%;
-}
-
-.navbar img {
-    margin-left: 10%;
-}
-
-.modal-content {
-    background: var(--bg-dark);
-    color:white;
-}
 
 .col-8 {
     max-width:70%;
@@ -42,3 +23,4 @@ a:hover {
 .col-3 {
     max-width: 24%;
 }
+
